2001-06-02  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (to-c-typedecl): tweak the 2001-05-30 patch.
	struct t1234 { struct t1234 * NEXT; ... }

2001-06-02  Sam Steingold  <sds@gnu.org>

	made GETENV setfable
	* lispbibl.d: declare clisp_setenv()
	* subr.d, constsym.d: added SYS::SETENV (set_env)
	* spvw_language.d: removed mysetenv, use clisp_setenv()
	* misc.d (clisp_setenv, SETENV): new functions
	(GETENV): barf on non-string arg instead of returning NIL
	* places.lisp: defsetf getenv when setenv is present

2001-06-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (LPARTS): added dirkey

2001-06-01  Sam Steingold  <sds@gnu.org>

	* screen.lisp: use DEFPACKAGE instead of USE-PACKAGE since this
	file is compiled even when it is not subsequently loaded.

2001-05-30  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (compile-file-pathname-helper): return a logical
	pathname when file is a logical pathname

2001-05-30  Sam Steingold  <sds@gnu.org>

	* pathname.d (merge-pathnames): fixed the 2001-05-24 patch to
	handle unbound defaults

2001-05-30  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (*package-tasks-treat-specially*): set to NIL
	(#+CROSS subr-info): `in-package' is now an always-evaluated macro
	(c-GLOBAL-FUNCTION-CALL): remove `in-package' from the list of
	specially treated tasks.

2001-05-30  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (with-defining-c-type): new macro
	(parse-components, c-struct-constructor): new functions
	(parse-c-type): use the above
	(to-c-typedecl): handle the recursive types (like linked lists)
	(def-c-enum): make `name' a synonym for `int'

2001-05-27  Sam Steingold  <sds@gnu.org>

	* regexp.lisp (mregerror): FINALIZE is in EXT

2001-05-25  Sam Steingold  <sds@gnu.org>

	* install.lisp, install.bat: bind LISP, FAS and MEM files with CLISP
	* makemake.in: added install.* to the win32 binary distribution

2001-05-25  Sam Steingold  <sds@gnu.org>

	* dirkey.lisp (dir-key-info): `dkey-info' is in LDAP, not SYS