@@ -1494,7 +1494,10 @@ LPARTS=$LPARTS' timezone places floatprint type defstruct format'
 LPARTS=$LPARTS' savemem trace cmacros compiler disassem defs2'
 LPARTS=$LPARTS' loop clos condition gstream xcharin keyboard'
 LPARTS=$LPARTS' screen beossock runprog query reploop dribble complete'
-LPARTS=$LPARTS' describe room edit macros3 foreign1 clhs inspect gray'
+LPARTS=$LPARTS' describe room edit macros3 clhs inspect gray'
+if [ $TSYS = master -o -n "$with_dynamic_ffi" ] ; then
+  LPARTS=$LPARTS' foreign1'
+fi
 if [ -n "$with_export_syscalls" ]; then
   LPARTS=$LPARTS' posix';
 fi
